<resources>
    <string name="app_name">ShopFlowers</string>
    <string name="first_page_title">Self-designed flower bouquets</string>
    <string name="sub_title_firstPage">Before ordering, please fill in the personal details</string>
    <string name="name_firstPage">name:</string>
    <string name="address_firstPage">address:</string>
    <string name="phone_number_firstPage">phone number:</string>
    <string name="hint_name_firstPage">enter your name</string>
    <string name="hint_address_firstPast">enter your address</string>
    <string name="hint_phone_number_firstPage">enter your phone number</string>
    <string name="btn_order">start order</string>
    <string name="missing1_toast">You must fill in your name</string>
    <string name="missing2_toast">You must fill in your name and address</string>
    <string name="missing3_toast">You must fill in your name , address and phone number</string>
    <string name="missing4_toast">You must fill in your address</string>
    <string name="missing5_toast">You must fill your phone number</string>
    <string name="missing6_toast">You must fill in your name and phone number</string>
    <string name="missing7_toast">You must fill in your address and phone number</string>
    <string name="first_flower">rose</string>
    <string name="quantity_flower">your quantity is:</string>
    <string name="enter_quantity">enter your quantity:</string>
    <string name="confirmation_of_quantity">confirm</string>
    <string name="enter_quantity_hint">Enter quantity</string>
    <string name="change_quantity">Change quantity</string>
    <string name="price_first_flower">Price per unit 6 NIS</string>
    <string name="second_flower">Sunflower</string>
    <string name="price_second_flower">Price per unit 4 NIS</string>
    <string name="third_flower">Lilac</string>
    <string name="price_third_flower">Price per unit 5 NIS</string>
    <string name="explanation_text">You need to choose the amount of flowers tou want to have in a bouquet of any kind</string>
    <string name="explanation_of_additions">You can select  extensions to order (you can choose more than one option). price which extension 20 NIS</string>
    <string name="check_box1_wine">Wine</string>
    <string name="check_box2_ballon">Ballon</string>
    <string name="spinner_option_1">Red wine</string>
    <string name="spinner_option_2">White wine</string>
    <string name="spinner_option_3">Champagne</string>
    <string name="choose_kind_wine_text">Choose kind wine</string>
    <string name="radio_button_1">Happy Birthday</string>
    <string name="radio_button_2">Heart</string>
    <string name="radio_button_3">Regular</string>
    <string name="choose_kind_ballon_text">Choose kind ballon</string>
    <string name="alert_dialog_text_quantity">Enter quantity of</string>
    <string name="end_order_button_text">End order</string>
    <string name="note_scroll_view_text">The page can be scroll</string>
    <string name="line_row">line</string>
    <string name="name_flower_row">name flower</string>
    <string name="count_row">count</string>
    <string name="price_flower_row">price flower</string>
    <string name="reciept_of_the_payment">Payment Receipt</string>
    <string name="sum_to_pay">Sum to pay:</string>
    <string name="nis_name">NIS</string>
    <string name="extensions_kind_row">extension kind</string>
    <string name="flowers_name">Flowers</string>
    <string name="extensions_name">Extensions</string>
    <string name="extensions_row">extension</string>
    <string name="extensions_price_row">price extension</string>
    <string name="price_flower_lilac">5 N</string>
    <string name="price_flower_sunflower">4 NIS</string>
    <string name="price_flower_rose">6 NIS</string>
    <string name="customer_title">Customer details</string>
    <string name="note_to_the_end_button_order">You did not choose to order any flower</string>
</resources>