<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/pp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_page_title"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:id="@+id/title_start"
        android:textColor="@color/black"
        android:shadowColor="@color/gray"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sub_title_firstPage"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:id="@+id/sub_tile"
        android:layout_marginBottom="25dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_firstPage"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/text_name_user"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_name_user"
            android:layout_alignBaseline="@id/text_name_user"
            android:background="@drawable/edittext_selector"
            android:hint="@string/hint_name_firstPage"
            android:id="@+id/edit_text_name_user"
            android:layout_marginEnd="8dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_firstPage"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/text_addrss_user"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_addrss_user"
            android:layout_alignBaseline="@id/text_addrss_user"
            android:background="@drawable/edittext_selector"
            android:hint="@string/hint_address_firstPast"
            android:id="@+id/edit_text_address_user"
            android:layout_marginEnd="8dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_firstPage"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/text_phone_user" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_phone_user"
            android:layout_alignBaseline="@id/text_phone_user"
            android:inputType="phone"
            android:background="@drawable/edittext_selector"
            android:hint="@string/hint_phone_number_firstPage"
            android:id="@+id/edit_text_phone_number"
            android:layout_marginEnd="8dp"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_start_order"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/button_selector"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_order"
        android:textColor="@color/black"
        android:layout_gravity="center" />
</LinearLayout>

