<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fadeScrollbars="false">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/user_details_output" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:id="@+id/explanation_text"
            android:text="@string/explanation_text"/>
        <RelativeLayout
            android:background= "@drawable/layout_desigh"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/flower_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:shadowColor="@color/gray"
                android:shadowDx="11"
                android:shadowDy="11"
                android:shadowRadius="2"
                android:text="@string/first_flower"
                android:textSize="22dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_first_flower"
                android:layout_below="@+id/flower_name_1"
                android:id="@+id/price_flower1"
                android:textSize="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_flower"
                android:layout_below="@+id/price_flower1"
                android:id="@+id/quantity_flower1_text"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:layout_toEndOf="@id/quantity_flower1_text"
                android:layout_alignBaseline="@+id/quantity_flower1_text"
                android:layout_below="@+id/price_flower1"
                android:id="@+id/quantity_flower1_number"
                android:textSize="18dp"
                android:layout_marginBottom="10dp" />
            <Button
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/price_flower1"
                android:text="@string/change_quantity"
                android:textColor="@color/black"
                android:textSize="11dp"
                android:backgroundTint="@color/button_press"
                android:id="@+id/btn_change_flower1"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp"
                android:src="@drawable/rose_picture"
                android:id="@+id/picture_flower1"/>
        </RelativeLayout>
        <RelativeLayout
            android:background= "@drawable/layout_desigh"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/flower_name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:shadowColor="@color/gray"
                android:shadowDx="11"
                android:shadowDy="11"
                android:shadowRadius="2"
                android:text="@string/second_flower"
                android:textSize="22dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_second_flower"
                android:layout_below="@+id/flower_name_2"
                android:id="@+id/price_flower2"
                android:textSize="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_flower"
                android:layout_below="@+id/price_flower2"
                android:id="@+id/quantity_flower2_text"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:layout_toEndOf="@id/quantity_flower2_text"
                android:layout_alignBaseline="@+id/quantity_flower2_text"
                android:layout_below="@+id/price_flower2"
                android:id="@+id/quantity_flower2_number"
                android:textSize="18dp"
                android:layout_marginBottom="10dp" />
            <Button
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/price_flower2"
                android:text="@string/change_quantity"
                android:textColor="@color/black"
                android:textSize="11dp"
                android:backgroundTint="@color/button_press"
                android:id="@+id/btn_change_flower2"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp"
                android:src="@drawable/sunflower_picture"
                android:background="@null"
                android:id="@+id/picture_flower2"/>
        </RelativeLayout>
        <RelativeLayout
            android:background= "@drawable/layout_desigh"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/flower_name_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:shadowColor="@color/gray"
                android:shadowDx="11"
                android:shadowDy="11"
                android:shadowRadius="2"
                android:text="@string/third_flower"
                android:textSize="22dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_third_flower"
                android:layout_below="@+id/flower_name_3"
                android:id="@+id/price_flower3"
                android:textSize="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_flower"
                android:layout_below="@+id/price_flower3"
                android:id="@+id/quantity_flower3_text"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:layout_toEndOf="@id/quantity_flower3_text"
                android:layout_alignBaseline="@+id/quantity_flower3_text"
                android:layout_below="@+id/price_flower3"
                android:id="@+id/quantity_flower3_number"
                android:textSize="18dp"
                android:layout_marginBottom="10dp" />
            <Button
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/price_flower3"
                android:text="@string/change_quantity"
                android:textColor="@color/black"
                android:textSize="11dp"
                android:backgroundTint="@color/button_press"
                android:id="@+id/btn_change_flower3"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp"
                android:src="@drawable/lilac_picture"
                android:background="@null"
                android:id="@+id/picture_flower3"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:id="@+id/explanation_of_additions"
            android:text="@string/explanation_of_additions"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box1_wine"
                android:id="@+id/check_box1_wine"
                android:layout_marginEnd="10dp"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/check_box1_wine"
                android:layout_alignBaseline="@+id/check_box1_wine"
                android:id="@+id/wine_view"
                android:visibility="gone"
                android:background="@color/creambright3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_kind_wine_text"
                    android:id="@+id/text_option_tv"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_option_tv"
                    android:id="@+id/choose_option"
                    android:textStyle="bold"/>
                <Spinner
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box2_ballon"
                android:id="@+id/check_box2_ballon"
                android:textSize="16dp"
                android:textStyle="italic"
                android:layout_marginEnd="10dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ballon_view"
                android:layout_toEndOf="@+id/check_box2_ballon"
                android:visibility="gone"
                android:background="@color/creambright3">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_text_ballon">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_kind_ballon_text"
                        android:id="@+id/tv_option_ballon"/>
                    <TextView
                        android:id="@+id/choose_option_ballon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_option_ballon"
                        android:textStyle="bold" />
                </RelativeLayout>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toEndOf="@+id/view_text_ballon"
                    android:id="@+id/group_radio_button_ballon">
                    <RadioButton android:id="@+id/radio_button_happy_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_1"/>
                    <RadioButton android:id="@+id/radio_button_heart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_2"/>
                    <RadioButton android:id="@+id/radio_button_reguler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_3"/>
                </RadioGroup>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_end_order"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/button_end_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_order_button_text"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:layout_below="@+id/btn_end_order"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>