<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/pp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reciept_of_the_payment"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:shadowColor="@color/gray"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/customer"
        android:textStyle="bold"
        android:textSize="19dp"
        android:text="@string/customer_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/customer_details"
        android:textSize="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:gravity="center"
        android:background="@drawable/gradient_selector"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/flowers_name"
        android:textSize="17dp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:id="@+id/scrollView_receipt"
        android:layout_gravity="center"
        android:fadeScrollbars="false">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutScroll"
            android:background="@drawable/gradient_selector"/>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="17dp"
        android:textStyle="bold"
        android:id="@+id/title_extention"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/layout_extebsions"
        android:background="@drawable/gradient_selector"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum_to_pay"
            android:id="@+id/sum_pay"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sum"
            android:layout_toEndOf="@id/sum_pay"
            android:layout_alignBaseline="@+id/sum_pay"
            android:textStyle="bold"
            android:textSize="19dp"/>
    </RelativeLayout>
</LinearLayout>